tests/parsing/missing_type/stderr.golden
error: unexpected newline, expected functionality type
bus.fbd +2:10
   |
 2 |   my_proc
   |          ^
